# transcript-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
tests/: test_cleaners.py
tests/fixtures/: sample_zoom.txt
transcript_cleaner/: __init__.py  cli.py  models.py
transcript_cleaner/cleaners/: __init__.py
transcript_cleaner/llm/: __init__.py
transcript_cleaner/parsers/: __init__.py
